# Samsara

./: .gitignore  Cargo.toml  Design-and-Research.md  Makefile  Project-Plan.md  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
bootloader/: Cargo.toml  Goals.md  Makefile  OVMF_CODE.fd  rust-toolchain.toml
bootloader/esp/: NvVars
bootloader/esp/efi/boot/: bootx64.efi
bootloader/src/: main.rs
compiler/: Cargo.toml
compiler/src/: main  main.rs  parser.rs  stage_one.rs  syntax.rs
compiler/src/ast/: mod.rs  syntax.rs  tokenizer.rs
compiler/test/sources/: main.yg
kernel/: Cargo.toml
kernel/src/: main.rs
src/: FileSystem.rs  MemoryManager.rs  ProcessScheduler.rs  boot.asm  boot.s  bootloader_example.asm  edit-main  kernel.rs  main  main.rs  memory_manager.rs  vga_buffer.rs
src/boot-asm/custom/src/: x86_64-bootloader-s1.asm  x86_64-bootloader-s2.asm
src/boot-asm/grub-utils/: boot-header.gas  boot-header.nasm  grub.cfg
src/boot-example/: x86_64-kernel-example.asm  x86_64-kernel-example.flp
src/bootloader/: boot.asm  boot2.asm
src/kernel/: header.asm  main.asm
targets/i386/: linker.ld
targets/i386/iso/boot/grub/: grub.cfg
uefi-x86_64/: Cargo.toml
uefi-x86_64/src/: main.rs
