[package]
name = "Samsara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#multiboot2 = "0.22.2"
#multiboot2-common = "0.1.2"
#multiboot2-header = { version = "0.5.1", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
