[package]
name = "Samsara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#bootloader = "0.11.7"
bootloader = "0.9"
volatile = "0.2.6"
x86_64 = "0.15.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
